@@ -1,27 +1,26 @@
-# $NetBSD: Makefile,v 1.83 2012/06/08 07:33:46 obache Exp $
+# $NetBSD: Makefile,v 1.84 2012/07/29 19:25:53 wiz Exp $
 
-DISTNAME=		bison-2.6
-CATEGORIES=		devel
-MASTER_SITES=		${MASTER_SITE_GNU:=bison/}
-EXTRACT_SUFX=		.tar.xz
+DISTNAME=	bison-2.6.2
+CATEGORIES=	devel
+MASTER_SITES=	${MASTER_SITE_GNU:=bison/}
+EXTRACT_SUFX=	.tar.xz
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://www.gnu.org/software/bison/bison.html
-COMMENT=		GNU yacc(1) replacement
-LICENSE=		gnu-gpl-v3
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://www.gnu.org/software/bison/bison.html
+COMMENT=	GNU yacc(1) replacement
+LICENSE=	gnu-gpl-v3
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-GNU_CONFIGURE=		YES
 USE_LANGUAGES=		c c++
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		grep gm4:run msgfmt flex
+GNU_CONFIGURE=		yes
+CONFIGURE_ENV+=		gt_cv_func_gnugettext1_libintl=yes
+CONFIGURE_ENV+=		ac_cv_prog_M4=${TOOLS_PATH.gm4}
+
 INFO_FILES=		yes
-
-CONFIGURE_ENV+=		gt_cv_func_gnugettext1_libintl=yes \
-			ac_cv_prog_M4=${TOOLS_PATH.gm4}
-
 TEST_TARGET=		check
 
 # Avoid rebuilding manpage
