@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.30 2012/06/06 07:20:36 wiz Exp $
+$NetBSD: distinfo,v 1.31 2012/07/29 19:25:53 wiz Exp $
 
-SHA1 (bison-2.6.tar.xz) = d2825cc4c5610c13a3035b5b97dcd9bf394c6ff5
-RMD160 (bison-2.6.tar.xz) = a0713e9cbddf856241e809d2a65ef7ee3637ff51
-Size (bison-2.6.tar.xz) = 1639796 bytes
+SHA1 (bison-2.6.2.tar.xz) = eb0ddc583954d435d95ec6c42ba168dedc09b9b7
+RMD160 (bison-2.6.2.tar.xz) = 7885e2fce583491c14b2fa7d8dbd9cbfc23eeca1
+Size (bison-2.6.2.tar.xz) = 1650196 bytes
 SHA1 (patch-doc_Makefile.in) = 11371a773019ada76396d36334abc6c8cac75ec6
 SHA1 (patch-lib_isnan.c) = c5d2603447064c95e8bbc75a24c09366b752bad6
 SHA1 (patch-src_Makefile.in) = 6baa8ff8b8f4f0aa9c8efee60e172584c68eac7c
