@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2012/05/12 07:16:46 wiz Exp $
 #
 
 DISTNAME=	man-pages-3.41
@@ -12,6 +12,8 @@ COMMENT=	The Linux man-pages project for Linux kernel and C library interface
 #LICENSE=	many, and not even upstream cares about sorting them out
 
 PKG_DESTDIR_SUPPORT=	user-destdir
+
+NO_BUILD=	# This package only installs files.
 
 USE_LANGUAGES=	# none
 MAKE_FLAGS+=	prefix=${PREFIX} DESTDIR=${DESTDIR}
