@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.2 2009/08/19 19:00:31 sno Exp $
+
+SHA1 (LWPx-TimedHTTP-1.8.tar.gz) = ce63f1403461097cdb806af253a3f55b3e12424a
+RMD160 (LWPx-TimedHTTP-1.8.tar.gz) = a64c76cf3b8a32281959ac27c4713128c64953ab
+Size (LWPx-TimedHTTP-1.8.tar.gz) = 9291 bytes
