@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2464 2012/08/05 00:56:52 wen Exp $
+$NetBSD: CHANGES-2012,v 1.2465 2012/08/05 12:06:26 ryoon Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3810,3 +3810,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated www/bluefish to 2.2.3 [drochner 2012-08-04]
 	Updated archivers/pigz to 2.2.5 [wen 2012-08-05]
 	Updated mail/thunderbird10-l10n to 10.0.6 [ryoon 2012-08-05]
+	Updated devel/bison to 2.6.2 [adam 2012-08-06]
